# rsmodx

./: Cargo.toml  README.md
src/: clustering.rs  decision_tree.rs  linier_regression.rs  main.rs  neural_network.rs  nlp.rs  web_api.rs
