[package]
name = "rust-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
# Machine Learning
linfa = "0.7"
linfa-linear = "0.7"
linfa-clustering = "0.7"
linfa-trees = "0.7"
linfa-preprocessing = "0.7"
ndarray = "0.16"
ndarray-rand = "0.16"
rand = "0.8"

# Neural Networks
candle = "0.3"
candle-core = "0.3"
candle-nn = "0.3"

# NLP
whatlang = "0.16"
rust-stemmers = "1.2"
unicode-segmentation = "1.10"

# Data Processing
polars = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Web API
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
